--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -7,18 +7,26 @@
     tools:context="com.btc.application.ui.dashboard.DashboardFragment"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <Button
+        android:id="@+id/bt_publish"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/bt_publish"/>
+
+    <Button
+        android:id="@+id/bt_order"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="300dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/bt_order"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <!--<TextView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/black"
-            android:textColor="@android:color/white"
-            android:textSize="24sp"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="hello"/>-->
         <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="200dp"
