--- a/app/src/main/res/layout/activity_publish_order.xml
+++ b/app/src/main/res/layout/activity_publish_order.xml
@@ -21,26 +21,14 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <!--<include layout="@layout/content_set2ndpwd" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />-->
-
     <EditText
-        android:id="@+id/pwd"
+        android:id="@+id/input_num"
         android:layout_width="310dp"
         android:layout_height="40dp"
         android:layout_marginTop="200dp"
         android:background="@drawable/password"
-        android:hint="@string/prompt_set2ndpwd"
-        android:imeActionLabel="@string/action_sign_in_short"
+        android:hint="@string/prompt_input_num"
         android:imeOptions="actionDone"
-        android:inputType="textPassword"
         android:selectAllOnFocus="true"
         android:textColorHint="@color/white"
         android:textColor="#ffffff"
@@ -56,15 +44,13 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
-        android:id="@+id/confirmpwd"
+        android:id="@+id/min_price"
         android:layout_width="310dp"
         android:layout_height="40dp"
         android:layout_marginTop="240dp"
         android:background="@drawable/password"
-        android:hint="@string/prompt_confirmpwd"
-        android:imeActionLabel="@string/action_sign_in_short"
+        android:hint="@string/prompt_min_price"
         android:imeOptions="actionDone"
-        android:inputType="textPassword"
         android:selectAllOnFocus="true"
         android:textColorHint="@color/white"
         android:textColor="#ffffff"
@@ -72,27 +58,27 @@
         android:layout_gravity="center_horizontal"
         android:maxLength="6"
         android:digits="0123456789"
-        app:layout_constraintTop_toBottomOf="@id/pwd"
-        app:layout_constraintLeft_toLeftOf="@id/pwd"
+        app:layout_constraintTop_toBottomOf="@id/input_num"
+        app:layout_constraintLeft_toLeftOf="@id/input_num"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <com.btc.application.util.CustomBtn
-        android:id="@+id/setpwd"
+        android:id="@+id/cbt_publish"
         android:layout_width="310dp"
         android:layout_height="35dp"
         android:layout_marginTop="300dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/buynow"
-        android:text="@string/action_set2ndpwd"
+        android:text="@string/action_publish_confirm"
         android:textColorHint="@color/white"
         android:textColor="#ffffff"
         android:textSize="14sp"
         android:layout_gravity="center_horizontal"
         android:maxLength="6"
         android:digits="0123456789"
-        app:layout_constraintTop_toBottomOf="@id/confirmpwd"
-        app:layout_constraintLeft_toLeftOf="@id/confirmpwd"
+        app:layout_constraintTop_toBottomOf="@id/min_price"
+        app:layout_constraintLeft_toLeftOf="@id/min_price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
