--- a/app/src/main/res/layout/activity_sell_detail.xml
+++ b/app/src/main/res/layout/activity_sell_detail.xml
@@ -77,7 +77,7 @@
         android:layout_marginTop="280dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/buynow"
-        android:text="@string/sell"
+        android:text="@string/cfm_sell"
         android:textColorHint="@color/white"
         android:textColor="#ffffff"
         android:textSize="14sp"
