--- a/app/src/main/res/layout/activity_buy_detail.xml
+++ b/app/src/main/res/layout/activity_buy_detail.xml
@@ -20,4 +20,71 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <TextView
+        android:id="@+id/buy_num"
+        android:layout_width="310dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="100dp"
+        android:hint="@string/prompt_input_num"
+        android:imeOptions="actionDone"
+        android:selectAllOnFocus="true"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:layout_gravity="center_horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/buy_min_price"
+        android:layout_width="310dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="160dp"
+        android:hint="@string/prompt_min_price"
+        android:imeOptions="actionDone"
+        android:selectAllOnFocus="true"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:layout_gravity="center_horizontal"
+        app:layout_constraintTop_toBottomOf="@id/input_num"
+        app:layout_constraintLeft_toLeftOf="@id/input_num"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/buy_unit_price"
+        android:layout_width="310dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="220dp"
+        android:hint="@string/prompt_unit_price"
+        android:imeOptions="actionDone"
+        android:selectAllOnFocus="true"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:layout_gravity="center_horizontal"
+        app:layout_constraintTop_toBottomOf="@id/min_price"
+        app:layout_constraintLeft_toLeftOf="@id/min_price"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <com.btc.application.util.CustomBtn
+        android:id="@+id/cbt_buy"
+        android:layout_width="310dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/buynow"
+        android:text="@string/cfm_buy"
+        android:textColorHint="@color/white"
+        android:textColor="#ffffff"
+        android:textSize="14sp"
+        android:layout_gravity="center_horizontal"
+        app:layout_constraintTop_toBottomOf="@id/unit_price"
+        app:layout_constraintLeft_toLeftOf="@id/unit_price"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
