--- a/app/src/main/res/layout/activity_buy_detail.xml
+++ b/app/src/main/res/layout/activity_buy_detail.xml
@@ -24,7 +24,7 @@
         android:id="@+id/buy_num"
         android:layout_width="310dp"
         android:layout_height="40dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:hint="@string/prompt_input_num"
         android:imeOptions="actionDone"
         android:selectAllOnFocus="true"
@@ -42,7 +42,7 @@
         android:id="@+id/buy_min_price"
         android:layout_width="310dp"
         android:layout_height="40dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="120dp"
         android:hint="@string/prompt_min_price"
         android:imeOptions="actionDone"
         android:selectAllOnFocus="true"
@@ -58,7 +58,7 @@
         android:id="@+id/buy_unit_price"
         android:layout_width="310dp"
         android:layout_height="40dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="160dp"
         android:hint="@string/prompt_unit_price"
         android:imeOptions="actionDone"
         android:selectAllOnFocus="true"
@@ -70,11 +70,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
+    <ImageView
+        android:id="@+id/receive_code_image"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="220dp"
+        android:layout_gravity="center_horizontal"
+        app:layout_constraintTop_toBottomOf="@id/buy_unit_price"
+        app:layout_constraintLeft_toLeftOf="@id/buy_unit_price"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
     <com.btc.application.util.CustomBtn
         android:id="@+id/cbt_buy"
         android:layout_width="310dp"
         android:layout_height="35dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="540dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/buynow"
         android:text="@string/cfm_buy"
@@ -82,8 +97,8 @@
         android:textColor="#ffffff"
         android:textSize="14sp"
         android:layout_gravity="center_horizontal"
-        app:layout_constraintTop_toBottomOf="@id/unit_price"
-        app:layout_constraintLeft_toLeftOf="@id/unit_price"
+        app:layout_constraintTop_toBottomOf="@id/receive_code_image"
+        app:layout_constraintLeft_toLeftOf="@id/receive_code_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
