--- a/app/src/main/res/layout/item_order_list.xml
+++ b/app/src/main/res/layout/item_order_list.xml
@@ -11,7 +11,7 @@
         android:layout_weight="10">
 
         <TextView
-            android:id="@+id/order_user_id"
+            android:id="@+id/order_title"
             android:layout_width="200dp"
             android:layout_height="20dp"
             android:textColor="@color/black"
